# Fine-Tuning-for-Deterministic-Tool-Calling

./: Qwen2_5_Coder_(1_5B)_Tool_Calling.ipynb  README.md  extracted_code.py  main.py  pyproject.toml  requirements.txt
configs/: base.yaml  config.yaml  smoke_test.yaml
src/: config_loader.py  data_processing.py  evaluation.py  inference.py  model.py  trainer.py  utils.py
src/adapters/: base_parser.py  sharegpt_parser.py  xlam_parser.py
src/core/: config.py  diagnostic.py  exceptions.py
src/models/: router_agent.py  validator.py
src/pipelines/: data_pipeline.py  evaluation_pipeline.py  training_pipeline.py
